<resources>
    <string name="app_name">Android App</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="weight_in_pounds">weight in pounds</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender</string>
    <string name="image_of_wine">image of wine</string>
    <string name="image_of_shot">image of shot</string>
    <string name="image_of_beer">image of beer</string>
    <string name="face_content_description">face changes based on user health</string>
    <string name="other">Other</string>
    <string name="see_how_you_re_doing">See how you\'re doing</string>
    <string name="alcohol_by_volume">% alcohol by volume</string>
    <string name="ounces_drank">ounces drank</string>
    <string name="add">Add</string>
    <string name="quickly_manually_calculate_your_bac">Quickly Manually Calculate your BAC</string>
    <string name="calculate">Calculate</string>
    <string name="number_of_drinks">Number of Drinks</string>
    <string name="your_bac_is">Your BAC is:</string>
    <string name="go_back">Go Back</string>
    <string name="hours_since_first_drink">Hours Since First Drink</string>
    <string name="manual">Manual</string>
    <string name="wanring">WARNING: Your BAC has reached dangerous levels. Seek help immediately!</string>
    <string name="warningsymbol">warningsymbol</string>

</resources>
